[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hierarchical_ts"
version = "0.0.1"
authors = [
  { name="Author", email="author@example.com" },
]
description = "A package for hierarchical time series forecasting"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "hierarchicalforecast",
    "statsforecast",
    "pandas",
    "numpy",
    "scikit-learn",
    "torch",
    "xgboost",
    "mlforecast",
    "neuralforecast",
    "datasetsforecast",
    "utilsforecast",
    "torch_geometric",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"
